29-Jun-2016 Issue #259. Added attribute C.Thirdparty, which optionally accepts a path to a Windows .rc resource file. If the path is set, then this is used instead of generating an .rc file for versioning. This is to allow builds of thirdparty software to use their own versioning.

29-Jun-2016 Issue #259. Updated examples with dynamic libraries to define major, minor, and patch versions (to match the BuildAMation version), and define a Description macro to use in Windows versioning resource files.

29-Jun-2016 Issue #259. Only the MajorVersion macro on a binary is assumed valid for Windows .rc versioning. MinorVersion and PatchVersion can be missing; if so, they will fallback to 0.

29-Jun-2016 Issue #259. Prebuilt binaries are not considered for a versioning .rc file on Windows.

29-Jun-2016 Bam.Core.MacroList's constructor now accepts an optional name of the object owning it. This is only used in diagnostic messages. The API has not changed, as a default value is provided.

29-Jun-2016 Fixes #259. All C binaries (applications, DLLs, plugins) now automatically generate an .rc (resource) file containing versioning information for that file. The macros 'MajorVersion', 'MinorVersion', 'PatchVersion' as already used in Linux and OSX, are used to generate the data. If a macro 'Description' exists on the binary module, this is used in the 'FileDescription' field in the generated .rc file. The current culture and codepage on the build machine are used to define the default language/codepage used in the .rc file. (Currently, automatic generation of different translations are not supported.)

29-Jun-2016 Issue #259. Windows resource modules now accept include paths on the settings interface, C.ICommonWinResourceCompilerSettings.

29-Jun-2016 Fixes #270. Changed the dynamic library extension in Mingw to .dll (was .so), to match the online documentation at https://access.redhat.com/documentation/en-US/Red_Hat_Enterprise_Linux/4/html/Using_ld_the_GNU_Linker/win32.html.
